# ebpf-engine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  install_dependencies.sh  main.cpp
inc/: armo-types.h  cli-parser.h  falco-libs.h  kubescape-types.h
src/: cli-parser.c  falco-libs.cpp  main.cpp
